# visvaultker

./: .env  .env.credentials  .env.example  .env.sample  .env.template  .gitignore  .replit  AGENTS_GUIDE.md  BROWSER_USE_IMPROVEMENTS.md  EXAMPLE_USAGE.md  INTELLIGENT_AGENT.md  LOCAL_SETUP.md  LOCATOR_STRATEGY.md  OAUTH_SETUP.md  OPENAI_EMBEDDINGS_SETUP.md  PHASES_10-14_COMPLETE.md  PLAYWRIGHT_MCP_OPTIMIZATIONS.md  README.md  SETUP.md  SIMPLE_LOCAL_SETUP.md  SSH_TUNNEL_GUIDE.md  WINDOWS.md  agents.py  app.py  config.py  design_guidelines.md  drizzle.config.ts  dummy  example.py  fetch_token.py  g.py  i  index.ts  jhgfds  llm_client.py  main.py  mcp_client.py  models.py  package-lock.json  package.json  (+18 more)
.ssh/: valargen-staging_key.pem
app/: __init__.py  models.py
attached_assets/: Pasted--AI-Rules-Using-AI-to-write-Stagehand-code-faster-and-better-You-re-likely-using-AI-to-wr-1762644580479_1762644580480.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-titl_1768297853814.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-utf-8-meta_1770543495392.txt  Pasted--Installation-Integrate-Stagehand-into-an-existing-project-Install-Stagehand-in-your-curre-1762644542665_1762644542665.txt  Pasted--Introducing-Stagehand-Developers-use-Stagehand-to-reliably-automate-the-web-Stagehand-is--1762644436632_1762644436633.txt  Pasted--Notepad-Search-View-Encoding-Language-Settings-all-VM-CO-Tools-Macro-Run-1I-Te-1761722873339_1761722873339.txt  Pasted--PROJECT-OVERVIEW-Goal-Build-a-web-application-that-connects-to-Jira-reads-an-EPIC-and-i-1761859500130_1761859500130.txt  (+26 more)
(+394 files in other folders)
